# demo-todo-backend

./: Dockerfile  Makefile  README.md  pyproject.toml
django/: docker-entrypoint.sh
django/main/: models.py  schema.py  settings.py  types.py  urls.py
django/main/management/commands/: seedstates.py
django/main/migrations/: 0001_initial.py
