[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Backend for a todo demo app"
authors = ["Fredrik Stockman <fredrik@versionlens.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
strawberry-graphql-django = "^0.8.2"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
